# ChangeLog for gnome-base/gnome-menus
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.84 2007/09/22 08:37:13 tgall Exp $

  22 Sep 2007; Tom Gall <tgall@gentoo.org>
  gnome-menus-2.18.3-r1.ebuild:
  stable on ppc64

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-menus-2.18.3-r1.ebuild:
  Stable on amd64 wrt bug #193339.

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-menus-2.18.3-r1.ebuild:
  Stable on x86 wrt bug #193339.

*gnome-menus-2.18.3-r1 (21 Sep 2007)

  21 Sep 2007; Mart Raudsepp <leio@gentoo.org>
  +files/gnome-menus-2.18.3-ignore_kde_standalone.patch,
  +gnome-menus-2.18.3-r1.ebuild:
  Remove useless KDE standalone kcmshell desktop files from the "Other" submenu

*gnome-menus-2.18.3 (29 Aug 2007)

  29 Aug 2007; Mart Raudsepp <leio@gentoo.org>
  +files/gnome-menus-2.18.3-other_category_fix.patch,
  +gnome-menus-2.18.3.ebuild:
  Version bump for some rare crash cases. Also include a patch that makes the
  "Other" submenu really show all the menu items that are not shown elsewhere

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> gnome-menus-2.18.2.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Mart Raudsepp <leio@gentoo.org> -gnome-menus-2.14.0.ebuild,
  -gnome-menus-2.18.0.ebuild:
  Removing Gnome 2.14

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> gnome-menus-2.18.2.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  gnome-menus-2.18.2.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> gnome-menus-2.18.2.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-menus-2.18.2.ebuild:
  Stable on ppc wrt bug #185823.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-menus-2.18.2.ebuild:
  Stable on sparc wrt #185823
