@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/orbit
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/orbit/ChangeLog,v 1.106 2007/09/21 22:58:13 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/orbit/ChangeLog,v 1.107 2007/09/22 14:44:34 dertobi123 Exp $
+
+  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  orbit-2.14.8-r3.ebuild:
+  ppc stable, bug #193339
 
   21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   orbit-2.14.8-r3.ebuild:
