@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-menus
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.84 2007/09/22 08:37:13 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.85 2007/09/22 14:45:15 dertobi123 Exp $
+
+  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  gnome-menus-2.18.3-r1.ebuild:
+  ppc stable, bug #193339
 
   22 Sep 2007; Tom Gall <tgall@gentoo.org>
   gnome-menus-2.18.3-r1.ebuild:
